AirquipUAT/force-app/main/default/objects/Job_Equipment_Usage__c/Job_Equipment_Usage__c.object-meta.xml
<CustomObject>
    <label>Job Equipment Usage</label>
    <nameField>
        <label>Job Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Equipment Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>