AirquipUAT/force-app/main/default/objects/Job_Equipment_Usage__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Job Equipment Usages</relationshipLabel>
    <relationshipName>Job_Equipment_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>