AirquipUAT/force-app/main/default/objects/Job_Equipment_Usage__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <referenceTo>fax__Job__c</referenceTo>
    <relationshipLabel>Job Equipment Usages</relationshipLabel>
    <relationshipName>Job_Equipment_Usages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>