AirquipUAT/force-app/main/default/objects/Job_Equipment_Usage__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <label>Run Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>